RIA-18843 Update install4j file to java 16
Add --illegal-access=permit options